--- a/css/carousel.css
+++ b/css/carousel.css
@@ -4,7 +4,8 @@
 
 body {
   padding-bottom: 40px;
-  color: #5a5a5a;
+  color: #737373;
+  font-family: 'Vollkorn', serif;
 }
 
 
@@ -28,10 +29,12 @@ body {
 .navbar-wrapper .navbar {
   padding-right: 15px;
   padding-left: 15px;
+  background-color: #e6e6e6;
 }
 .navbar-wrapper .navbar .container {
   width: auto;
 }
+
 
 
 /* CUSTOMIZE THE CAROUSEL
@@ -41,10 +44,6 @@ body {
 .carousel {
   height: 500px;
   margin-bottom: 60px;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
 }
 
 /* Declare heights because of positioning of img element */
