added content to contact page

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,12 @@ body {
   height: 500px;
 }
 
+/* CUSTOMIZE THE CONTACT PAGE
+-------------------------------------------------- */
+
+
+
+
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
