--- a/css/main.css
+++ b/css/main.css
@@ -62,10 +62,21 @@ body {
   height: 500px;
 }
 
+
+
 /* CUSTOMIZE THE CONTACT PAGE
 -------------------------------------------------- */
 
+.main-content {
+  height: 500px;
+  margin-top: 40%;
+  margin-left: 8%;
+  margin-bottom: 25%;
+}
 
+  .main-item {
+    min-width: 70%;
+  }
 
 
 /* RESPONSIVE CSS
@@ -91,10 +102,31 @@ body {
   .navbar-wrapper .navbar {
     border-radius: 4px;
   }
+
+/*Contact Page*/
+  .main-content {
+    height: 500px;
+    margin-top: 20%;
+    margin-left: 6%;
+    margin-bottom: 25%;
+  }
+
+  .main-item {
+    min-width: 70%;
+  }
 }
 
 @media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
+  /*Contact Page*/
+    .main-content {
+      height: 500px;
+      margin-top: 18%;
+      margin-left: 6%;
+      margin-bottom: 25%;
+    }
+
+    .main-item {
+      min-width: 70%;
+    }
+
   }
-}
